--- a/.github/workflows/bundle_tests.yaml
+++ b/.github/workflows/bundle_tests.yaml
@@ -6,6 +6,7 @@ on:
   pull_request: ~
 
 jobs:
+
   build:
     runs-on: ${{ matrix.operating-system }}
     name: PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
@@ -13,7 +14,7 @@ jobs:
       matrix:
         operating-system: [ ubuntu-latest ]
         php: [ '8.0' ]
-        symfony: ['~5.1.0', '~5.2.0', '~5.3.0']
+        symfony: ['~5.3.0']
 
     steps:
       - uses: actions/checkout@master
@@ -33,7 +34,44 @@ jobs:
         run: composer bin all install
 
       - name: Run test suite on PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
+
+      - uses: codecov/codecov-action@v2
+        with:
+          #          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage.xml
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
 
       - name: Run Psalm
         run: ./vendor/bin/psalm
+
+  style_coverage_commit:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: install deps, to execute things
+        run: composer install --no-scripts --no-autoloader --no-progress --ignore-platform-reqs
+
+      - name: install php cs fixer
+        run: composer bin csfixer install --no-progress --ignore-platform-reqs
+
+      - name: fix style
+        run: ./vendor/bin/php-cs-fixer fix
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v2.3.0
+        with:
+          commit_message: Auto Code Style Fix
+          branch: ${{ steps.extract_branch.outputs.branch }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
