MISC: update dev tools

--- a/vendor-bin/static/composer.json
+++ b/vendor-bin/static/composer.json
@@ -3,5 +3,10 @@
         "vimeo/psalm": "^4.9",
         "php-standard-library/psalm-plugin": "^1.1",
         "psalm/plugin-symfony": "^2.5"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     }
 }
