--- a/.github/workflows/bundle_tests.yaml
+++ b/.github/workflows/bundle_tests.yaml
@@ -13,14 +13,14 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: [ '8.0','8.1' ]
-        symfony: ['~5.3.0', '~5.4.0', '~6.0.0']
+        php: [ '8.2','8.3' ]
+        symfony: ['~6.2.0', '~6.3.0', '~6.4.0', '~7.0.0' ]
 
     steps:
       - uses: actions/checkout@master
 
       - name: "Cache Composer packages"
-        uses: "actions/cache@v2"
+        uses: "actions/cache@v3"
         with:
           path: "~/.composer/cache"
           key: "php-${{ matrix.php }}-symfony-${{ matrix.symfony }}-composer-${{ hashFiles('composer.json') }}"
