--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
-    "matthiasnoback/symfony-config-test": "^4.2",
+    "matthiasnoback/symfony-config-test": "^v5.1.0",
     "nyholm/symfony-bundle-test": "dev-master",
     "roave/security-advisories": "dev-master",
     "symfony/filesystem": "^6.3 || ^7.0",
